[gd_scene load_steps=2 format=3 uid="uid://c4dxucukoi2j"]

[ext_resource type="Script" uid="uid://c2d6fb0mrjedc" path="res://0-core/dev_console/console_ui.gd" id="1_5tk5u"]

[node name="ConsoleUI" type="Control"]
z_index = 10
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -250.0
offset_top = -300.0
offset_right = 250.0
offset_bottom = 300.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
script = ExtResource("1_5tk5u")

[node name="InputField" type="LineEdit" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 65.0
grow_horizontal = 2
keep_editing_on_text_submit = true

[node name="AutocompleteField" type="RichTextLabel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 68.0
grow_horizontal = 2
grow_vertical = 2

[connection signal="text_changed" from="InputField" to="." method="_on_input_field_text_changed"]
[connection signal="text_submitted" from="InputField" to="." method="_on_input_field_text_submitted"]
